--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Ugur Balci">
-  <meta name="description" content="Site personnel de Ugur Balci">
-  <meta name="keywords" content="Ugur Balci, Portfolio, Web, Étudiant">
-  <title>Ugur Balci</title>
+  <title>Site de Ugur</title>
 </head>
 <body>
-  <h1>Bienvenue sur le site de Ugur Balci</h1>
-  <p>Ce site a été créé pour présenter mes projets et mon parcours.</p>
+  <h1>Bienvenue sur mon site !</h1>
+  <p>Ce site est hébergé avec GitHub Pages.</p>
 </body>
 </html>
